<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_details_title_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_title_image_height_298dp"
            android:contentDescription="@string/title_image_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/tools_test_backdrop" />

        <ImageView
            android:id="@+id/iv_details_title_shadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_title_image_height_298dp"
            android:contentDescription="@string/title_image_description"
            android:src="@drawable/shadow_maker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_details_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="60dp"
            android:alpha="0.5"
            android:drawablePadding="@dimen/gap_half_8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/back_arrow_text"
            android:textColor="@color/white"
            android:textSize="@dimen/size_base_12sp"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_details_pg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounder_black_5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="3dp"
            android:paddingBottom="4dp"
            android:text="@string/parental_advisory_13"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size_base_12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_details_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="@dimen/gap_standard_16dp"

            android:text="@string/movie_title"
            android:textColor="@color/white_text"
            android:textSize="@dimen/size_title_40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/size_title_40sp" />

        <TextView
            android:id="@+id/tv_details_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginEnd="@dimen/gap_standard_16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/movie_tags"
            android:textColor="@color/tags"
            android:textSize="@dimen/size_larger_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_title" />

        <RatingBar
            android:id="@+id/rb_details_rating_bar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="5dp"
            android:numStars="5"
            android:progressTint="@color/tags"
            android:rating="3.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_genres" />

        <TextView
            android:id="@+id/tv_details_reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_half_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reviews_count"
            android:textAllCaps="true"
            android:textColor="@color/gray_statistics_text"
            android:textSize="@dimen/size_larger_14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/rb_details_rating_bar"
            app:layout_constraintStart_toEndOf="@id/rb_details_rating_bar"
            app:layout_constraintTop_toTopOf="@id/rb_details_rating_bar" />

        <TextView
            android:id="@+id/details_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="@dimen/gap_one_and_half_24dp"
            android:layout_marginEnd="@dimen/gap_standard_16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/storyline"
            android:textColor="@color/white_text"
            android:textSize="@dimen/size_larger_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_reviews_count" />

        <TextView
            android:id="@+id/tv_details_storyline_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="@dimen/gap_standard_16dp"
            android:layout_marginEnd="@dimen/gap_standard_16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/storyline_text"
            android:textColor="@color/white"
            android:textSize="@dimen/size_larger_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_storyline"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/details_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="38dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cast"
            android:textColor="@color/white_text"
            android:textSize="@dimen/size_larger_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_storyline_text" />

        <!--GridLayoutManager only for UI testing,
        must be LinearLayoutManager set by code-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_details_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_standard_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_cast"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/view_holder_actor"
            tools:spanCount="4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>