<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="296dp"
    android:background="@drawable/rect_rounded_8dp">

    <ImageView
        android:id="@+id/iv_title_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/rounder_black_6dp"
        android:contentDescription="@string/title_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_avengers_the_end"
        app:layout_constraintBottom_toTopOf="@id/gl_item_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/title_image_description"
        android:src="@drawable/shadow_maker_card"
        app:layout_constraintBottom_toTopOf="@id/gl_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <TextView
        android:id="@+id/tv_details_pg"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/gap_half_8dp"
        android:background="@drawable/rounder_black_5dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="3dp"
        android:paddingBottom="4dp"
        android:text="@string/parental_advisory_13"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_base_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ch_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/gap_half_8dp"
        android:button="@drawable/checkbox_favorite"
        android:theme="@style/FavoriteCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_details_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_half_8dp"
        android:layout_marginEnd="@dimen/gap_half_8dp"
        android:layout_marginBottom="@dimen/gap_quarter_4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/movie_tags"
        android:textColor="@color/tags"
        android:textSize="@dimen/size_micro_8sp"
        app:layout_constraintBottom_toTopOf="@id/rb_rating_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/rb_rating_bar"
        style="@style/CustomMiniRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_half_8dp"
        android:layout_marginBottom="18dp"
        android:numStars="5"
        android:progressTint="@color/tags"
        android:rating="3.5"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reviews_count"
        android:textAllCaps="true"
        android:textColor="@color/gray_minutes_color"
        android:textSize="@dimen/size_micro_8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/rb_rating_bar"
        app:layout_constraintStart_toEndOf="@id/rb_rating_bar"
        app:layout_constraintTop_toTopOf="@id/rb_rating_bar" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_half_8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/movie_title"
        android:textColor="@color/white_text"
        android:textSize="@dimen/size_larger_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_duration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_half_8dp"
        android:layout_marginBottom="@dimen/gap_half_8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/duration_min"
        android:textAllCaps="true"
        android:textColor="@color/gray_minutes_color"
        android:textSize="@dimen/size_micro_8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>