<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_list_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_standard_16dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/movies_list"
            android:src="@drawable/ic_movies_list_title_sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_half_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            android:textSize="@dimen/size_larger_14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_list_title_image"
            app:layout_constraintStart_toEndOf="@id/iv_list_title_image"
            app:layout_constraintTop_toTopOf="@id/iv_list_title_image" />

        <!-- Turn it to RecyclerView's item soon -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_card_container"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rect_rounded_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_title">

            <ImageView
                android:id="@+id/iv_movie_title_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/orig_colored"
                android:background="@drawable/rounder_black_6dp"
                android:contentDescription="@string/title_image_description"
                app:layout_constraintBottom_toTopOf="@id/gl_item_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/title_image_description"
                android:src="@drawable/shadow_maker_card"
                app:layout_constraintBottom_toTopOf="@id/gl_item_image"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_item_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.84" />

            <TextView
                android:id="@+id/parental_advisory_text"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/gap_half_8dp"
                android:background="@drawable/rounder_black_5dp"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="3dp"
                android:paddingBottom="4dp"
                android:text="@string/parental_advisory_13"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/size_base_12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/movie_card_container" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="@dimen/gap_half_8dp"
                android:src="@drawable/ic_like"
                app:layout_constraintEnd_toEndOf="@id/movie_card_container"
                app:layout_constraintTop_toTopOf="@id/movie_card_container"
                android:contentDescription="@string/like" />

            <TextView
                android:id="@+id/movie_tags_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_half_8dp"
                android:layout_marginBottom="@dimen/gap_quarter_4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/movie_tags"
                android:textColor="@color/tags"
                android:textSize="@dimen/size_micro_8sp"
                app:layout_constraintBottom_toTopOf="@id/rb_movie_rating_bar"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/rb_movie_rating_bar"
                style="@style/CustomMiniRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_half_8dp"
                android:layout_marginBottom="18dp"
                android:numStars="5"
                android:progressTint="@color/tags"
                android:rating="3.5"
                app:layout_constraintBottom_toTopOf="@id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@id/movie_card_container" />

            <TextView
                android:id="@+id/tv_movie_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reviews_count"
                android:textAllCaps="true"
                android:textColor="@color/gray_minutes_color"
                android:textSize="@dimen/size_micro_8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rb_movie_rating_bar"
                app:layout_constraintStart_toEndOf="@id/rb_movie_rating_bar"
                app:layout_constraintTop_toTopOf="@id/rb_movie_rating_bar" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_half_8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/movie_title"
                android:textColor="@color/white_text"
                android:textSize="@dimen/size_larger_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_movie_duration"
                app:layout_constraintStart_toStartOf="@id/movie_card_container" />


            <TextView
                android:id="@+id/tv_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_half_8dp"
                android:layout_marginBottom="@dimen/gap_half_8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/movie_duration"
                android:textAllCaps="true"
                android:textColor="@color/gray_minutes_color"
                android:textSize="@dimen/size_micro_8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/movie_card_container"
                app:layout_constraintStart_toStartOf="@id/movie_card_container" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>